--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <head>
   <meta charset="UTF-8">
   <!-- Imposta la codifica dei caratteri -->
+  <!-- altro commento a caso -->
+  
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Rende la pagina responsive su mobile -->
