Aggiornamento sito con nuove modifiche

--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="contacts.html">Contacts</a>
+          <a href="contacts.html">Contacts</a>
         </nav>
-
+        <div class="extra-links">
+          <a href="corsi.html">Corsi</a>
+          <a href="eventi.html">Eventi</a>
+          <a href="galleria.html">Galleria</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacts.html">Contacts</a>
+        </div>
       </div>
     </div>
   </header>
@@ -53,14 +60,14 @@
   <!-- MAIN: diviso in due colonne -->
   <main class="container">
     <!-- Contenitore principale -->
+     
 
     <!-- SEZIONE PRINCIPALE (75%) -->
     <section class="main-content">
-      <img src="img/logo.jpeg" alt="Logo Shirin Dance" class="logo">
+      <img src="img/logo colorato.jpeg" alt="Logo Shirin Dance" class="logo">
       <!-- Logo principale -->
 
-      <p>Benvenuti nel sito di Shirin Dance!</p>
-      <!-- Testo di benvenuto -->
+      
 
       <!-- GALLERIA VIDEO CON HOVER -->
       <div class="gallery">
