--- a/mobile/index.html
+++ b/mobile/index.html
@@ -14,7 +14,9 @@
   <title>Shirin Dance</title>
   <!-- Titolo che appare nella scheda del browser -->
 
-  <link rel="stylesheet" href="css/stilemobile.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <link rel="stylesheet" href="css/top.css">
 
   <script src="../js/desktop.js"></script>
   <!--reindirizza alla versione desktop se si è da pc-->
@@ -59,3 +61,4 @@
   </nav>
 
 </header>
+
