--- a/mobile/index.html
+++ b/mobile/index.html
@@ -52,7 +52,7 @@
           <a href="index.html">HOME</a>
           <div class="hoverContainer2">
             <div class="hoverBox2">
-              CHI SIAMO
+              <a>CHI SIAMO</a>
             </div>
             <div class="hoverContent2">              
               <a href="presentazione.html">La nostra storia</a>
@@ -64,7 +64,7 @@
           
           <div class="hoverContainer2">
             <div class="hoverBox2">
-              GALLERY
+              <a>GALLERY</a>
             </div>
             <div class="hoverContent2">              
               <a href="foto.html">Foto</a>
@@ -74,7 +74,7 @@
           </div>
           <div class="hoverContainer2">
             <div class="hoverBox2">
-              BLOG
+              <a>BLOG</a>
             </div>
             <div class="hoverContent2">              
               <a href="articoli.html">Articoli</a>
@@ -84,7 +84,7 @@
           </div>
           <div class="hoverContainer2">
             <div class="hoverBox2">
-              CONTATTI
+              <a>CONTATTI</a>
             </div>
             <div class="hoverContent2">              
               <a href="contatti.html">Contatti</a>
@@ -95,5 +95,6 @@
       </div>
     </div>
   </header>
+
 
 
