--- a/mobile/index.html
+++ b/mobile/index.html
@@ -56,9 +56,9 @@
             </div>
             <div class="hoverContent2">              
               <a href="presentazione.html">La nostra storia</a>
-              <a href="scuola.html">La nostra scuola</a>
-              <a href="compagnia.html">La nostra compagnia</a>
-              <a href="fcbd.html">La nostra Rainbow Tribe</a>
+              <a href="scuola.html">La Scuola</a>
+              <a href="compagnia.html">La Compagnia</a>
+              <a href="fcbd.html">Rainbow Tribe</a>
             </div>
           </div>
           
@@ -95,6 +95,7 @@
       </div>
     </div>
   </header>
+
 
 
 
