--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
               CHI SIAMO
             </div>
             <div class="hoverContent2">              
-              <a href="presentazione.html">La nostra storia</a>
-              <a href="scuola.html">La nostra scuola</a>
-              <a href="compagnia.html">La nostra compagnia</a>
-              <a href="fcbd.html">La nostra Rainbow Tribe</a>
+              <a href="pagine/chi siamo/base.html">La nostra storia</a>
+              <a href="pagine/chi siamo/base.html">La Scuola</a>
+              <a href="pagine/chi siamo/base.html">La Compagnia</a>
+              <a href="pagine/chi siamo/base.html">Rainbow Tribe</a>
             </div>
           </div>
           
@@ -79,9 +79,9 @@
               GALLERY
             </div>
             <div class="hoverContent2">              
-              <a href="foto.html">Foto</a>
-              <a href="video.html">Video</a>
-              <a href="interviste.html">Racconti</a>
+              <a href="pagine/Gallery/base.html">Foto</a>
+              <a href="pagine/Gallery/base.html">Video</a>
+              <a href="pagine/Gallery/base.html">Racconti</a>
             </div>
           </div>
           <div class="hoverContainer2">
@@ -89,9 +89,9 @@
               BLOG
             </div>
             <div class="hoverContent2">              
-              <a href="articoli.html">Articoli</a>
-              <a href="reel.html">Reel</a>
-              <a href="storie.html">Storie</a>
+              <a href="pagine/Blog/base.html">Articoli</a>
+              <a href="pagine/Blog/base.html">Reel</a>
+              <a href="pagine/Blog/base.html">Storie</a>
             </div>
           </div>
           <div class="hoverContainer2">
@@ -99,8 +99,8 @@
               CONTATTI
             </div>
             <div class="hoverContent2">              
-              <a href="contatti.html">Contatti</a>
-              <a href="sedi.html">Sedi</a>
+              <a href="pagine/Contatti/base.html">Contatti</a>
+              <a href="pagine/Contatti/base.html">Sedi</a>
             </div>
           </div>
         </div>
