--- a/pagine/Contatti/base.html
+++ b/pagine/Contatti/base.html
@@ -106,5 +106,44 @@
       </div>
     </div>
   </header>
-  <p>Under construction</p>
+
+  
+
+  <!-- Sezione newsletter -->
+<section id="newsletter" style="text-align:center; padding: 40px 0;
+  background: linear-gradient(to right, #4F0B13, #240508); /* Bordeaux profondo */
+  color:whitesmoke
+  ">
+  
+  <!-- Titolo -->
+  <h2 style="font-size: 2.2rem;">Iscriviti alla nostra Newsletter</h2>
+
+  <!-- Descrizione -->
+  <p style="font-size: 1.5rem;">Rimani aggiornato sulle ultime novità!</p>
+
+  <!-- Contenitore scrollabile -->
+  <div style="
+    width: 50%;               /* Larghezza del box visibile */
+    height: 350px;              /* Altezza visibile: il resto sarà scrollabile */
+    margin: 0 auto;             /* Centra il box */
+    border: 2px solid #ccc;     /* Bordo grigio medio */
+    border-radius: 10px;        /* Angoli arrotondati */
+    overflow-y: scroll;         /* Permette lo scorrimento verticale */
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1); /* Effetto ombra */
+  ">
+    
+    <!-- IFRAME del Google Form -->
+    <iframe
+      src="https://forms.gle/efZnML7FJSmYrwUf7" 
+      width="100%"  height="800" frameborder="0" marginheight="0" marginwidth="0" >
+      <!--width="100%"              L iframe si adatta alla larghezza del box -->
+      <!--height="800"              L’intero form è più alto del contenitore -->
+      <!--frameborder="0"           Nessun bordo visibile -->
+      <!--marginheight="0"          Nessun margine interno verticale -->
+      <!--marginwidth="0">          Nessun margine interno orizzontale -->
+      Caricamento…             <!-- Testo mostrato mentre il form si carica -->
+    </iframe>
+  </div>
+
+</section>
 </body>
