--- a/pagine/Eventi/prova.html
+++ b/pagine/Eventi/prova.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Rende la pagina responsive su mobile -->
 
-  <title>Base</title>
+  <title>Figli della Terra</title>
   <!-- Titolo che appare nella scheda del browser -->
 
   <link rel="stylesheet" href="../../css/style.css">
@@ -27,18 +27,17 @@
   <script src="../../js/mobile.js"></script>
   <!--indirizza la pagina alla versione mobile se siamo su telefono-->
 </head>
-
 <body>
-  <!-- CORPO DELLA PAGINA -->
-  
-  <div id="header"></div>
+    <div id="header"></div>
 
   <main>
-    <h1>Under construction</h1>
+    <h1>Contenuto della pagina</h1>
+    <p>Benvenuto nel mio sito!</p>
   </main>
 
-  <div id="footer"></div>
+    <div id="footer"></div>
   
-  <script src="../../js/linkesterni.js" ></script>
-  <script src="../../js/base.js"></script> 
+   <script src="../../js/base.js"></script> 
+
 </body>
+</html>
