--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="hoverContent2">              
               <a href="pagine/Contatti/base.html">Contatti</a>
-              <a href="pagine/Contatti/base.html">Sedi</a>
+              <a href="pagine/Contatti/iscrizioneNewsletter.html">Newsletter</a>
             </div>
           </div>
         </div>
