--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               CHI SIAMO
             </div>
             <div class="hoverContent2">              
-              <a href="pagine/chi siamo/base.html">La nostra storia</a>
+              <a href="pagine/chi siamo/lanostrastoria.html">La nostra storia</a>
               <a href="pagine/chi siamo/base.html">La Scuola</a>
               <a href="pagine/chi siamo/base.html">La Compagnia</a>
               <a href="pagine/chi siamo/base.html">Rainbow Tribe</a>
@@ -119,13 +119,34 @@
   <!-- Sezione 1: Hero con logo come sfondo -->
       <section class="hero">
         <div class="hero-slider">
-          <img src="img/home/slidering/logo.colorato.jpeg" alt="Logo colorato" class="active">
-          <img src="img/home/slidering/scuola.JPG" alt="Shirin Dance Scuola">
-          <img src="img/home/slidering/ats .jpg" alt="Rainbow Tribe">
-          <img src="img/home/slidering/spada comp .jpg" alt="Shirin Dance Company">
-          <img src="img/home/slidering/KHALIJI.jpg" alt="Eventi">
-          <img src="img/home/slidering/logo.colorato.jpeg" alt="Logo colorato">
-          <img src="img/home/slidering/SPADA DSC_5954.jpg" alt="Eventi">
+          <img src="img/home/slidering/0logo.colorato.jpeg" alt="Logo colorato" class="active">
+          <img src="img/home/slidering/0sil1.jpeg" alt="Silvana">
+          <img src="img/home/slidering/1scuola1.JPG" alt="Shirin Dance Scuola">
+          <img src="img/home/slidering/2fcbd1.jpeg" alt="Rainbow Tribe">
+          <img src="img/home/slidering/3compagnia1.jpg" alt="Shirin Dance Company">
+          <img src="img/home/slidering/4eventi1.jpeg" alt="Eventi">
+          <img src="img/home/slidering/5unica1.jpeg" alt="Unica">
+          <img src="img/home/slidering/0logo.colorato.jpeg" alt="Logo colorato">
+          <img src="img/home/slidering/0sil2.jpeg" alt="Silvana">
+          <img src="img/home/slidering/1scuola2.jpeg" alt="Shirin Dance Scuola">
+          <img src="img/home/slidering/2fcbd2.jpeg" alt="Rainbow Tribe">
+          <img src="img/home/slidering/3compagnia2.jpg" alt="Shirin Dance Company">
+          <img src="img/home/slidering/4eventi2.jpeg" alt="Eventi">
+          <img src="img/home/slidering/5unica2.jpeg" alt="Unica">
+          <img src="img/home/slidering/0logo.colorato.jpeg" alt="Logo colorato">
+          <img src="img/home/slidering/0sil3.jpeg" alt="Silvana">
+          <img src="img/home/slidering/1scuola3.jpeg" alt="Shirin Dance Scuola">
+          <img src="img/home/slidering/2fcbd3.jpeg" alt="Rainbow Tribe">
+          <img src="img/home/slidering/3compagnia3.jpg" alt="Shirin Dance Company">
+          <img src="img/home/slidering/4eventi3.jpeg" alt="Eventi">
+          <img src="img/home/slidering/5unica3.jpeg" alt="Unica">
+          <img src="img/home/slidering/0logo.colorato.jpeg" alt="Logo colorato">
+          <img src="img/home/slidering/0sil4.jpeg" alt="Silvana">
+          <img src="img/home/slidering/1scuola4.jpeg" alt="Shirin Dance Scuola">
+          <img src="img/home/slidering/2fcbd4.jpeg" alt="Rainbow Tribe">
+          <img src="img/home/slidering/3compagnia4.jpeg" alt="Shirin Dance Company">
+          <img src="img/home/slidering/4eventi4.jpeg" alt="Eventi">
+          <img src="img/home/slidering/5unica4.jpeg" alt="Unica">
         </div>
 
         <script src="js/slidering2.js" defer></script>
