--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
               <a href="pagine/Contatti/iscrizioneNewsletter.html">Newsletter</a>
             </div>
           </div>
+          <div class="hoverContainer2">
+            <div class="hoverBox2" style="font-family: Arial, Helvetica, sans-serif">
+              Leggibilità
+            </div>
+            <div class="hoverContent2" style="font-family: Arial, Helvetica, sans-serif; margin-left: -60%;">              
+              <span id="toggleFont" style="cursor:pointer; text-decoration: underline; text-align: center">
+                Aumenta la leggibilità
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -292,8 +302,8 @@
             </div>
         </footer>
   <script src="js/videohover.js"></script>
-<script src="/linkesterni.js" ></script>
-<script src="js/base.js"></script>
+<script src="js/linkesterni.js" ></script>
+  <script src="js/dislessia.js"></script>
 </body>
  
 </html>
