--- a/pagine/Contatti/iscrizioneNewsletter.html
+++ b/pagine/Contatti/iscrizioneNewsletter.html
@@ -82,7 +82,6 @@
   
   <script src="../../js/linkesterni.js" ></script>
   <script src="../../js/base.js"></script> 
-
-
+  <script src="../../js/dislessia.js"></script>
 </body>
 </html>
