--- a/pagine/Eventi/figlidellaterra.html
+++ b/pagine/Eventi/figlidellaterra.html
@@ -24,6 +24,9 @@
   <link rel="stylesheet" href="../../css/containers.css">
   <!-- Collega il file CSS esterno -->
 
+  <link rel="stylesheet" href="../../css/dislessia.css">
+  <!-- Collega il file CSS esterno -->
+
   <script src="../../js/mobile.js"></script>
   <!--indirizza la pagina alla versione mobile se siamo su telefono-->
 </head>
@@ -137,6 +140,7 @@
   <div id="footer"></div>
 <script src="../../js/linkesterni.js" ></script>
 <script src="../../js/base.js"></script> 
+<script src="../../js/dislessia.js"></script>
 </body>
 </html>
 
