--- a/pagine/chi siamo/base.html
+++ b/pagine/chi siamo/base.html
@@ -24,6 +24,9 @@
   <link rel="stylesheet" href="../../css/containers.css">
   <!-- Collega il file CSS esterno -->
 
+  <link rel="stylesheet" href="../../css/dislessia.css">
+  <!-- Collega il file CSS esterno -->
+
   <script src="../../js/mobile.js"></script>
   <!--indirizza la pagina alla versione mobile se siamo su telefono-->
 </head>
@@ -41,4 +44,5 @@
   
   <script src="../../js/linkesterni.js" ></script>
   <script src="../../js/base.js"></script> 
-</body>
+  <script src="../../js/dislessia.js"></script>
+  </body>
