--- a/pagine/Gallery/base.html
+++ b/pagine/Gallery/base.html
@@ -41,5 +41,7 @@
   
   <script src="../../js/linkesterni.js" ></script>
   <script src="../../js/base.js"></script> 
+  <script src="../../js/dislessia.js"></script>
+
 </body>
 </html>
