--- a/pagine/chi siamo/lanostrastoria.html
+++ b/pagine/chi siamo/lanostrastoria.html
@@ -102,4 +102,7 @@
   <script src="../../js/videoyt.js"></script>
   <script src="../../js/linkesterni.js" ></script>
   <script src="../../js/base.js"></script> 
+  <script src="../../js/dislessia.js"></script>
+
 </body>
+</html>
