--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <link rel="stylesheet" href="css/slidering.css">
   <!-- Collega il file CSS esterno -->
 
+  <link rel="stylesheet" href="css/popup.css">
+  <!-- Collega il file CSS esterno -->
+
   <script src="js/mobile.js"></script>
   <!--indirizza la pagina alla versione mobile se siamo su telefono-->
 </head>
@@ -161,6 +164,17 @@
 
         <script src="js/slidering2.js" defer></script>
 
+        <div id="popup-container" class="popup-overlay hidden">
+          <div class="popup">
+            <button class="close-btn" id="closePopup">&times;</button>
+            <h2>Figli della Terra</h2>
+            <p class="pretesto">Sono aperte le iscrizioni a <em>Figli della Terra</em>, laboratorio di Oriental Fusion: Danze e Musica del Sud Italia.</p>
+            <a href="pagine/Eventi/figlidellaterra.html" class="more-info" target="_blank">Più info</a>
+          </div>
+        </div>
+
+        <script src="js/popup.js"></script>
+
 
           <!-- Se vuoi sovrapporre contenuti sul logo, li metti qui -->
         <div class="corner-box blog-box">
@@ -175,7 +189,7 @@
               <a class="pretesto">Sono aperte le iscrizioni per partecipare a <em>Figli della Terra</em>, laboratorio di Oriental Fusion: Danze e Musica del Sud Italia.
                 Con Silvana Difalco, Silvia De Ronzo e Maurizio Messore</a>
               <br><br>
-              <a href="news.html"; style="color:rgb(160, 80, 235)">Altre News</a>
+              <a href="pagine/Contenitori/news.html"; style="color:rgb(160, 80, 235)">Altre News</a>
 
             </div>
           </div> <!--fine hover-->
