--- a/mobile/index.html
+++ b/mobile/index.html
@@ -17,6 +17,9 @@
 
   <link rel="stylesheet" href="css/containers.css">
 
+  <!--<script src="../js/desktop.js"></script>
+  <!-- Indirizza su desktop-->
+
 
 </head>
 
@@ -91,10 +94,24 @@
               <a href="sedi.html">Sedi</a>
             </div>
           </div>
+          <div class="hoverContainer2">
+            <div class="hoverBox2" style="font-family: Arial, Helvetica, sans-serif">
+              Leggibilità
+            </div>
+            <div class="hoverContent2" style="font-family: Arial, Helvetica, sans-serif;">              
+              <span id="toggleFont" style="cursor:pointer; text-decoration: underline; text-align: center">
+                Aumenta la leggibilità
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </header>
+
+
+  <script src="../js/dislessia.js"></script>
+  </html>
 
 
 
