--- a/mobile/index.html
+++ b/mobile/index.html
@@ -52,7 +52,6 @@
         
         
         <div class="extra-links">
-          <a href="index.html">HOME</a>
           <div class="hoverContainer2">
             <div class="hoverBox2">
               <a>CHI SIAMO</a>
@@ -86,15 +85,6 @@
             </div>
           </div>
           <div class="hoverContainer2">
-            <div class="hoverBox2">
-              <a>CONTATTI</a>
-            </div>
-            <div class="hoverContent2">              
-              <a href="contatti.html">Contatti</a>
-              <a href="sedi.html">Sedi</a>
-            </div>
-          </div>
-          <div class="hoverContainer2">
             <div class="hoverBox2" style="font-family: Arial, Helvetica, sans-serif">
               Leggibilità
             </div>
@@ -108,7 +98,23 @@
       </div>
     </div>
   </header>
-
+<footer>
+  <div class="row">
+    <div class="footer-left">
+      <img src="../../img/home/logofoot.png">
+    </div>
+    <div class="footer-center">
+      <a style="font-size: 150%">®Shirin Dance di Silvana Difalco
+        <span style="display: block; line-height: 2;">
+          Compagnia di Danza Orientale, Folklore, Fusion, FCBD®, Bollywood.
+        </span>
+      </a>
+    </div>
+    <div class="footer-right">
+      <br><br>Sito a cura di<br>Laura Porceddu
+    </div>
+  </div>
+</footer>
 
   <script src="../js/dislessia.js"></script>
   </html>
