--- a/mobile/index.html
+++ b/mobile/index.html
@@ -78,7 +78,8 @@
             <div class="hoverBox2">
               <a>BLOG</a>
             </div>
-            <div class="hoverContent2">              
+            <div class="hoverContent2"> 
+              <a href="pagine/Blog/base.html">Base</a>             
               <a href="articoli.html">Articoli</a>
               <a href="reel.html">Reel</a>
               <a href="storie.html">Storie</a>
