--- a/pagine/1Home/home.html
+++ b/pagine/1Home/home.html
@@ -16,18 +16,11 @@
   <title>Home</title>
   <!-- Titolo che appare nella scheda del browser -->
 
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../../css/stile.css">
 
   <link rel="stylesheet" href="../../css/box.css">
   <!-- Collega il file CSS esterno -->
 
-  <link rel="stylesheet" href="../../css/containers.css">
-  <!-- Collega il file CSS esterno -->
-
-  <link rel="stylesheet" href="../../css/slidering.css">
-  <!-- Collega il file CSS esterno -->
-
-  <link rel="stylesheet" href="../../css/dislessia.css">
   <!-- Collega il file CSS esterno -->
 
   <link rel="stylesheet" href="../../css/popup.css">
@@ -223,5 +216,4 @@
   <script src="../../js/videohover.js"></script>
   <script src="../../js/linkesterni.js" ></script>
   <script src="../../js/1headerfooter.js"></script> 
-  <script src="../../js/dislessia.js"></script>
   </body>
